[project]
name = "data-adventure-rpg"
version = "0.1.0"
description = "An interactive web-based game that teaches data analysis concepts through a detective-themed adventure"
authors = [
    {name = "Data Detective", email = "detective@dataland.com"}
]
readme = "README.md"
requires-python = ">=3.8.1"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"] 